--- a/index.html
+++ b/index.html
@@ -29,18 +29,7 @@
                     <span class="say">有一种爱的感觉，叫感同身受。有一种爱的默契，叫心有灵犀。有一种爱的承诺，叫天长地久。</span><br>
                     <span class="say"> 有一种爱的方式，是执子之手，与子携老
   你喜欢猪，我喜欢你，猪喜欢我。</span><br>
-                    <span class="say"> I LOVE YOU ——贺健</span><br>
-                    <span class="say">我期待这一生与你一起走过，</span><br>
-                    <span class="say">我期待与你慢慢变老</span><br>
-                    <span class="say">等我们老到哪儿也去不了，</span><br>
-                    <span class="say">还能满载着一生的幸福快乐 ！</span><br>
-                    <br>
-                    <span class="say">我会为我们的未来撑起一片天空，</span><br>
-                     <span class="say">为我们的将来担负起一生的责任，</span><br>
-                      <span class="say">愿意为你去做每一件能让你开心快乐的事。</span><br>
-                       <span class="say">所有我们经历的点点滴滴，</span><br>
-                        <span class="say">都是我们一辈子最美的回忆。</span><br>
-                         <span class="say">我愿意爱你直到老去！</span><br>
+                   
                    <br>
                     <span class="say"><span class="space"></span> -- Yours, hejian.</span>
                     </div>
@@ -51,7 +40,7 @@
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
-            <audio src="love.mp3" autoplay="autoplay"></audio>
+            <audio src="https://sagit-chu.github.io/love.github.io/love.mp3" autoplay="autoplay" control="control" loop="loop"></audio>
         </div>
     
     <script>
