--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <canvas id="canvas" width="1100" height="680"></canvas>
             </div>
-            <audio src="https://sagit-chu.github.io/love.github.io/love.mp3" autoplay="autoplay" control="control" loop="loop"></audio>
+            <audio src="https://sagit-chu.github.io/love.github.io/love.mp3" autoplay="autoplay" controls="controls" loop="loop"></audio>
         </div>
     
     <script>
